express-t2s-app-v4/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-t2s
  namespace: apps
  labels:
    app: express-t2s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-t2s
  template:
    metadata:
      labels:
        app: express-t2s
    spec:
      containers:
        - name: app
          image: "780593603882.dkr.ecr.us-east-1.amazonaws.com/t2s-express-app:latest" # << replace
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
